<resources>
    <string name="app_name">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="doc">文档</string>
    <string name="action_settings">设置</string>
    <string name="action_opensource">开源</string>
    <string name="action_about">关于</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮件地址非法</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_other">其他账号登陆</string>
    <string name="login_check">登录验证</string>
    <string name="scan_qr">扫描二维码</string>
    <string name="scan_gqr">生成二维码</string>
    <string name="scan_wechat">微信扫描</string>
    <string name="scan_alipay">支付宝扫描</string>
    <string name="scan_alipay_paycode">支付宝支付码</string>
    <string name="create_shotcut">创建快捷方式</string>
    <string name="float_menu">悬浮菜单</string>
    <string name="search">搜索</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nav_custom_view">自定义控件</string>
    <string name="nav_solution">解决方案</string>
    <string name="nav_blog">博客</string>
    <string name="nav_opensource">开源框架</string>
    <string name="nav_exitapp">退出应用</string>
    <string name="nav_materialdesign">MaterialDesign</string>
    <string name="nav_github">Github</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="resume">简历</string>
    <!--代码高亮-->
    <string name="light_format" formatted="false">
        <![CDATA[
        <font color=\'#28b5f5\'>Discover</font> and <font color=\'#28b5f5\'>play</font>games.
        ]]>
    </string>
    <string name="waveview">水波纹WaveView</string>
    <string name="carddisplay">卡券效果</string>
    <string name="onekeylockscreen">浏览器下载</string>
    <!--复数表达形式-->
    <plurals name="time">
        <item quantity="zero">0</item>
        <item quantity="one">1</item>
        <item quantity="few">Few</item>
        <item quantity="many">Many</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
