<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">
		<Button
			android:id="@+id/sol_check_login"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:text="@string/login_check"/>
		<Button
			android:id="@+id/sol_qr_scan"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:text="@string/scan_qr"/>
		<Button
			android:id="@+id/sol_gqr_scan"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:text="@string/scan_gqr"/>
		<Button
			android:id="@+id/sol_wechat_scan"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:text="@string/scan_wechat"/>
		<Button
			android:id="@+id/sol_alipay_scan"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?android:attr/selectableItemBackground"
			android:text="@string/scan_alipay"/>
</LinearLayout>