<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:gravity="center_horizontal"
			  android:orientation="vertical"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="@dimen/activity_vertical_margin"
			  tools:context="com.code19.drawer.activity.LoginActivity">

    <!-- Login progress -->
	<ProgressBar
		android:id="@+id/login_progress"
		style="?android:attr/progressBarStyleLarge"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:visibility="gone"/>

    <ScrollView
		android:id="@+id/login_form"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

        <LinearLayout
			android:id="@+id/email_login_form"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

            <AutoCompleteTextView
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_email"
				android:inputType="textEmailAddress"
				android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

            <EditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/prompt_password"
				android:imeActionId="@+id/login"
				android:imeActionLabel="@string/action_sign_in_short"
				android:imeOptions="actionUnspecified"
				android:inputType="textPassword"
				android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
				android:id="@+id/email_sign_in_button"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="登录"
				android:textStyle="bold"/>
			<Button
				android:id="@+id/logout"
				style="?android:textAppearanceSmall"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="退出登录"
				android:textStyle="bold"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/other_login"/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/login_webo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:drawableTop="@drawable/weibo_binding"
					android:text="微博"/>
				<TextView
					android:id="@+id/login_wechat"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:drawableTop="@drawable/wechat_binding"
					android:text="微信"/>
				<TextView
					android:id="@+id/login_qq"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:drawableTop="@drawable/qq_binding"
					android:text="QQ"/>
			</LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
